  o Fix slight FLAC seek inaccuracy e.g. when using `trim' effect.  (robs)

Audio device drivers:

  o New native OpenBSD audio handler for play/recording.  (Alexandre Ratchov)
  o 24-bit support for ALSA handler.  (robs)
  o Warn if ALSA under/overrun.  (robs)

Effects:

  o New `sinc' FFT filter effect; replacement for `filter'.  (robs)
  o New `overdrive' effect.  (robs)
  o New `pluck' and `tpdf' types for `synth'.  (robs)
  o Can now set common parameters for multiple `synth' channels.  (robs)
  o Richer gain/normalise options.  (robs)
  o Fix [2487589] `dither' clipping detection & handling.  (robs)
  o Fix `repeat' sometimes stopping repeating too soon.  (robs)
  o Fix `repeat' sometimes repeating wrong audio segments.  (robs)
  o Fix [2332343] 'silence' segfault with certain lengths. (cbagwell)
  o Fix temporary file problems in Windows (cygwin) with normalise and
    other effects.  (robs)
  o Parallel effects channel processing on some hyper-threading/mult-core
    architectures.  New `--single-threaded' option to disable this.  (robs)

Other new features:

  o Added ability to create shared DLL's on cygwin (cbagwell)
  o New `--guard' & `--norm' options; use temporary files to guard against
    clipping for many, but not currently all, effects.  (robs)
  o New `--ignore-length' option to ignore length in input file
    header (for simple encodings); instead, read to end of file.  (robs)
  o New `--temp DIRECTORY' option.  (robs)
  o Grouped files, e.g. play -r 6k "*.vox" plays all at 6k.  (robs)
  o Automatically `dither'; new `--no-dither' option to disable this.  (robs)
  o Can now use `u' & `d' keys to adjust volume whilst playing audio (on some
    systems).  (robs)
  o New bitrate, time in seconds, & total options for soxi.  (robs)

Other bug fixes:

  o Fix [2262177] SoX build could fail with parse /etc/issue error.  (robs)

Internal improvements:

  o Rationalise use of and make repeatable across different platforms