@@ -270,16 +270,16 @@ libsox_la_SOURCES = adpcms.c adpcms.h aiff.c aiff.h cvsd.c cvsd.h cvsdfilt.h \
 # Effects source
 libsox_la_SOURCES += \
 	band.h bend.c biquad.c biquad.h biquads.c chorus.c compand.c \
-	compandt.c compandt.h contrast.c dcshift.c delay.c dither.c \
-	dither_fir.h dither_iir.h earwax.c echo.c echos.c effects.c effects.h \
-	effects_i.c fade.c fft4g.c fft4g.h fifo.h filter.c flanger.c input.c \
+	compandt.c compandt.h contrast.c dcshift.c delay.c dft_filter.c \
+	dft_filter.h dither.c dither_fir.h dither_iir.h earwax.c echo.c \
+	echos.c effects.c effects.h effects_i.c effects_i_dsp.c fade.c fft4g.c \
+	fft4g.h fifo.h filter.c fir.c firfit.c flanger.c gain.c input.c \
 	ladspa.c loudness.c mcompand.c mcompand_xover.h mixer.c noiseprof.c \
-	noisered.c noisered.h gain.c output.c pad.c pan.c phaser.c \
-	rate.c rate_filters.h rate_half_fir.h \
-	rate_poly_fir0.h rate_poly_fir.h remix.c repeat.c reverb.c \
-	reverse.c silence.c skeleff.c speed.c splice.c stat.c swap.c stretch.c \
-	synth.c tempo.c tremolo.c trim.c vol.c overdrive.c effects_i_dsp.c \
-	dft_filter.c dft_filter.h sinc.c
+	noisered.c noisered.h output.c overdrive.c pad.c pan.c phaser.c rate.c \
+	rate_filters.h rate_half_fir.h rate_poly_fir0.h rate_poly_fir.h \
+	remix.c repeat.c reverb.c reverse.c silence.c sinc.c skeleff.c speed.c \
+	splice.c stat.c stretch.c swap.c synth.c tempo.c tremolo.c trim.c \
+	vol.c
 if HAVE_PNG
     libsox_la_SOURCES += spectrogram.c
 endif
