@@ -35,6 +35,8 @@
   EFFECT(equalizer)
   EFFECT(fade)
   EFFECT(filter)
+  EFFECT(fir)
+  EFFECT(firfit)
   EFFECT(flanger)
   EFFECT(gain)
   EFFECT(highpass)
